验证缺少时间戳问题，先提交

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -9,6 +9,12 @@ body {
   background-attachment: fixed;
 }
 
+button,
+.checkbox,
+.radio {
+  cursor: pointer;
+}
+
 .shake {
   animation: shake 0.82s cubic-bezier(0.36, 0.07, 0.19, 0.97) 0.2s both;
   transform: translate3d(0, 0, 0);
